# NOVAI-node

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/codec/tests/: golden_vectors.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs
crates/smt/: Cargo.toml
crates/smt/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: ARCHITECTURE_DECISIONS.md  CLEANROOM_POLICY.md  INSPIRATION_REGISTER.md  SECURITY_MODEL.md  week-1.md  week-2.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs
scripts/: install-hooks.sh  pre-commit-identity-guard.sh
