[package]
name = "novai-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
novai-types = { path = "../types" }
novai-codec = { path = "../codec" }
blake3 = "=1.8.2"
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand_core = "0.6"
