[package]
name = "mempool"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
novai-types = { path = "../types" }
novai-codec = { path = "../codec" }
novai-crypto = { path = "../crypto" }
[dev-dependencies]
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand_core = "0.6"

